# checkRS-link-checker

./: Dockerfile  Makefile  Pipfile  README.md  config_default.yml  setup.cfg  setup.py
.github/workflows/: docker-image.yml
src/checkrs_linkto/: __init__.py  bot.py  report.py
