[metadata]
license_file = LICENSE
license = MIT
name = checkrs_linkto
url = https://github.com/rstudio/checkRS-linkto
author = RStudio QA Engineers
author_email = qa+checkrs_linkto@rstudio.com
description = Website crawler and structure recorder
long_description = file:README.md
long_description_content_type = text/markdown

[options]
zip_safe = true
setup_requires =
    wheel
python_requires = >3.5, <4
install_requires = setuptools
packages = checkrs_linkto
package_dir =
     = src
scripts =
    bin/linkto_bot
    bin/linkto_report
